# grey-scott-sim

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: Application.hpp  ComputeManager.hpp  Renderer.hpp  Simulation.hpp  SimulationCPU.hpp  SimulationParams.hpp
kernels/: grey_scott.cl
src/: main.cpp
src/compute/: ComputeManager.cpp  Simulation.cpp
src/core/: Application.cpp
src/cpu/: SimulationCPU.cpp
src/graphics/: Renderer.cpp
